--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@capacitor-community/media": "^8.0.1",
+    "@capacitor-firebase/authentication": "^7.4.0",
     "@capacitor/android": "^7.4.4",
     "@capacitor/camera": "^7.0.2",
     "@capacitor/cli": "^7.4.4",
@@ -23,7 +24,7 @@
     "cloudinary": "^2.8.0",
     "crypto-browserify": "^3.12.1",
     "dotenv": "^17.2.3",
-    "firebase": "^12.6.0",
+    "firebase": "^11.2.0",
     "firebase-admin": "^13.6.0",
     "firebase-functions": "^7.0.0",
     "howler": "^2.2.4",
