--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -10,6 +10,12 @@
         "FirebaseAuthentication": {
             "skipNativeAuth": false,
             "providers": ["google.com"]
-    }
+        },
+        "SplashScreen": {
+            "launchShowDuration": 0,
+            "launchAutoHide": true,
+            "androidSplashResourceName": "splash",
+            "showSpinner": false
+        }
   }
 }
