--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "duet",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "private": true,
   "dependencies": {
+    "@capacitor-community/keep-awake": "^7.1.0",
     "@capacitor-community/media": "^8.0.1",
     "@capacitor-firebase/authentication": "^7.4.0",
     "@capacitor/android": "^7.4.4",
