--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "analyze": "npm run build && npx serve -s build",
     "cleanup": "node scripts/cleanupCloudinary.js",
     "cleanup-old": "node -e \"require('./scripts/cleanupCloudinary.js').cleanupOldCloudinaryAssets(30).then(() => console.log('Done')).catch(console.error)\""
   },
