--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.5",
     "react-scripts": "5.0.1",
+    "react-window": "^2.2.3",
     "simple-peer": "^9.11.1",
     "web-vitals": "^2.1.4",
     "webrtc-adapter": "^9.0.3"
