--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -6,6 +6,11 @@ if (keystorePropertiesFile.exists()) {
     keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 }
 
+def hasReleaseSigning = keystoreProperties["RELEASE_STORE_FILE"] &&
+        keystoreProperties["RELEASE_STORE_PASSWORD"] &&
+        keystoreProperties["RELEASE_KEY_ALIAS"] &&
+        keystoreProperties["RELEASE_KEY_PASSWORD"]
+
 android {
     namespace "com.devfusion.duet"
     compileSdk rootProject.ext.compileSdkVersion
@@ -13,8 +18,8 @@ android {
         applicationId "com.devfusion.duet"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 17
-        versionName "1.1.7"
+        versionCode 18
+        versionName "1.1.8"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         aaptOptions {
              // Files and dirs to omit from the packaged assets dir, modified to accommodate modern web apps.
@@ -24,18 +29,21 @@ android {
     }
     signingConfigs {
         release {
-            storeFile file(keystoreProperties["RELEASE_STORE_FILE"])
-            storePassword keystoreProperties["RELEASE_STORE_PASSWORD"]
-            keyAlias keystoreProperties["RELEASE_KEY_ALIAS"]
-            keyPassword keystoreProperties["RELEASE_KEY_PASSWORD"]
+            if (hasReleaseSigning) {
+                storeFile file(keystoreProperties["RELEASE_STORE_FILE"])
+                storePassword keystoreProperties["RELEASE_STORE_PASSWORD"]
+                keyAlias keystoreProperties["RELEASE_KEY_ALIAS"]
+                keyPassword keystoreProperties["RELEASE_KEY_PASSWORD"]
+            } else {
+                logger.lifecycle("Release keystore not configured; using debug signing for release builds.")
+            }
         }
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-
-            signingConfig signingConfigs.release
+            signingConfig hasReleaseSigning ? signingConfigs.release : signingConfigs.debug
         }
     }
 }
